fix mobile layout bugs

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -22,6 +22,15 @@ html {
 body {
   height: 100%;
   overflow: auto;
+
+  word-break: break-all;
+
+  // Non standard for webkit
+  word-break: break-word;
+
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
 }
 
 h1 {
