--- a/src/styles/components/_article-grid.scss
+++ b/src/styles/components/_article-grid.scss
@@ -2,20 +2,23 @@
   display: grid;
   list-style: none;
   margin: 0;
-  padding: 0;
-
+  padding: 0 var(--inner-x-padding);
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(6, 1fr);
   grid-gap: var(--gap-size);
 
-  &-item {
-    margin: 0 !important;
-    padding: 0 !important;
+  @include bp(S) {
+    padding: 0;
   }
 
   @include bp(M) {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
+  }
+
+  &-item {
+    margin: 0 !important;
+    padding: 0 !important;
   }
 
   > :nth-child(7n + 3) {
