--- a/src/styles/components/_nav-graph.scss
+++ b/src/styles/components/_nav-graph.scss
@@ -4,6 +4,7 @@
   opacity: 0.9;
   color: #fff;
   visibility: hidden;
+  word-break: auto-phrase;
 
   @include bp(L) {
     visibility: visible;
