--- a/src/styles/components/_nav-menu.scss
+++ b/src/styles/components/_nav-menu.scss
@@ -7,7 +7,8 @@
   width: var(--side-panel-width);
   color: #fff;
   background: #000;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   position: fixed;
   height: 100%;
   z-index: -1;
